@@ -3,21 +3,17 @@
  */
 
 #messagetoolbar a.markasjunk2,
-#messagetoolbar a.markasjunk2Sel,
-#messagetoolbar a.markasnotjunk2,
-#messagetoolbar a.markasnotjunk2Sel
+#messagetoolbar a.markasnotjunk2
 {
   background-image: url(images/mail_toolbar.png);
 }
 
-#messagetoolbar a.markasjunk2,
-#messagetoolbar a.markasjunk2Sel
+#messagetoolbar a.markasjunk2
 {
   background-position: center -14px;
 }
 
-#messagetoolbar a.markasnotjunk2,
-#messagetoolbar a.markasnotjunk2Sel
+#messagetoolbar a.markasnotjunk2
 {
   background-position: center -61px;
 }
