@@ -2,6 +2,7 @@ Roundcube Webmail MarkAsJunk2
 =============================
 
  * email_learn driver: use new rcmail_resend_mail class (req RC 040a71e)
+ * replace classes .markasjunk2Sel/.markasnotjunk2Sel with .pressed
 
 Version 1.11.1 (2017-07-29, rc-1.3)
 =================================================
